test refactoring